@@ -32,6 +32,7 @@ Roger Meier
 Mathaus Mendel
 Arturo Castro
 Adrian Imboden
+Matej Knopp
 
 --
 $Id$
